erDiagram
    %% Styles
    classDef userOrg fill:#E1F5FE,stroke:#01579B,stroke-width:3px,font-size:24px,font-weight:bold;
    classDef survey fill:#E8F5E9,stroke:#2E7D32,stroke-width:3px,font-size:24px,font-weight:bold;
    classDef analysis fill:#FFF3E0,stroke:#EF6C00,stroke-width:3px,font-size:24px,font-weight:bold;
    classDef casual fill:#F3E5F5,stroke:#7B1FA2,stroke-width:3px,font-size:24px,font-weight:bold;
    classDef notif fill:#FFEBEE,stroke:#C62828,stroke-width:3px,font-size:24px,font-weight:bold;

    %% --- Tier 1: Core (Top) ---
    users["<center><b>users</b><br><b>(ユーザー)</b></center>"] {
        int id PK
        string username
        string role
    }
    organizations["<center><b>organizations</b><br><b>(組織)</b></center>"] {
        int id PK
        string name
    }
    organization_members["<center><b>organization_members</b><br><b>(組織メンバー)</b></center>"] {
        int id PK
        int user_id FK
        int organization_id FK
        string role
    }

    organizations ||--o{ organization_members : ""
    users ||--o{ organization_members : ""

    class users userOrg
    class organizations userOrg
    class organization_members userOrg

    %% --- Tier 2: Notifications (Side/Top) ---
    notifications["<center><b>notifications</b><br><b>(通知)</b></center>"] {
        int id PK
        int user_id FK
        int organization_id FK
        string type
        string title
    }
    users ||--o{ notifications : ""
    %% organizations ||--o{ notifications : ""

    class notifications notif

    %% --- Tier 3: Modules (Middle) ---
    
    %% Module A: Surveys
    surveys["<center><b>surveys</b><br><b>(アンケート)</b></center>"] {
        int id PK
        int organization_id FK
        int created_by FK
        string title
    }
    questions["<center><b>questions</b><br><b>(設問)</b></center>"] {
        int id PK
        int survey_id FK
        string text
    }
    answers["<center><b>answers</b><br><b>(回答)</b></center>"] {
        int id PK
        int survey_id FK
        int question_id FK
        int user_id FK
        string content
    }

    organizations ||--o{ surveys : ""
    surveys ||--o{ questions : ""
    questions ||--o{ answers : ""
    users ||--o{ answers : ""

    class surveys survey
    class questions survey
    class answers survey

    %% Module B: Analysis
    analysis_sessions["<center><b>analysis_sessions</b><br><b>(分析セッション)</b></center>"] {
        int id PK
        int organization_id FK
        string title
        string theme
    }
    analysis_results["<center><b>analysis_results</b><br><b>(分析結果)</b></center>"] {
        int id PK
        int session_id FK
        string sub_topic
        string summary
    }
    issue_definitions["<center><b>issue_definitions</b><br><b>(課題定義)</b></center>"] {
        int id PK
        int session_id FK
        string content
    }
    comments["<center><b>comments</b><br><b>(コメント)</b></center>"] {
        int id PK
        int session_id FK
        int user_id FK
        int parent_id FK
        string content
    }

    organizations ||--o{ analysis_sessions : ""
    analysis_sessions ||--o{ analysis_results : ""
    analysis_sessions ||--o{ issue_definitions : ""
    analysis_sessions ||--o{ comments : ""
    users ||--o{ comments : ""

    class analysis_sessions analysis
    class analysis_results analysis
    class issue_definitions analysis
    class comments analysis

    %% Module C: Casual Board
    casual_posts["<center><b>casual_posts</b><br><b>(雑談投稿)</b></center>"] {
        int id PK
        int organization_id FK
        int user_id FK
        int parent_id FK
        string content
    }
    casual_analyses["<center><b>casual_analyses</b><br><b>(雑談分析)</b></center>"] {
        int id PK
        int organization_id FK
        text result_json
    }

    organizations ||--o{ casual_posts : ""
    organizations ||--o{ casual_analyses : ""
    users ||--o{ casual_posts : ""

    class casual_posts casual
    class casual_analyses casual
